# src/models/User.ts
@@ -1,4 +1,4 @@
-import { prop, getModelForClass, pre, index } from "@typegoose/typegoose";
+import { prop, getModelForClass, pre, index, modelOptions, Severity } from "@typegoose/typegoose";
 import { TimeStamps } from "@typegoose/typegoose/lib/defaultClasses";
 import { ethers } from "ethers";
 
@@ -13,18 +13,21 @@ import { ethers } from "ethers";
 })
 
 @index({ address: 1 }, { unique: true })
+@modelOptions({ options: { allowMixed: Severity.ALLOW } })
 
 export class User extends TimeStamps {
 
   @prop({ required: true, immutable: true })
   public address!: string;
 
-  @prop({ required: true, default: false })
-  public admin!: boolean;
-
   @prop({ required: false })
   public nonce?: string;
 
+  @prop({ required: false, default: [] })
+  public scopes?: string[];
+
+  @prop({ required: false, select: false, default: null })
+  public jwt?: string;
 }
 
 export const UserModel = getModelForClass(User);
